# openconnect-sso-mtls

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md
.github/workflows/: codingstyle.yml  release.yml  test.yml
src/openconnect_sso/: __init__.py  cli.py  config.py  profile.py
src/openconnect_sso/app/: __init__.py  process.py
src/openconnect_sso/auth/: __init__.py  authenticator.py  saml.py
src/openconnect_sso/browser/: __init__.py  browser.py  webengine_process.py
tests/: __init__.py  conftest.py  test_browser.py  test_hostprofile.py
