[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "1.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/openconnect_sso/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/openconnect_sso"]

[project]
name = "openconnect-sso-mtls"
dynamic = ["version"]
description = "Wrapper script for OpenConnect supporting Azure AD (SAMLv2) authentication to Cisco SSL-VPNs"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "László Vaskó", email = "laszlo.vasko@outlook.com" },
    { name = "Joseph Mesterhazy", email = "jmesterh@stanford.edu" },
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: Qt",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
]
dependencies = [
    "attrs>=18.2",
    "colorama>=0.4,<0.5",
    "lxml>=6.0",
    "keyring>=21.1",
    "prompt-toolkit>=3.0.3,<4",
    "pyxdg>=0.26,<0.29",
    "requests>=2.22,<3",
    "structlog>=20.1",
    "toml>=0.10,<0.11",
    "PySocks>=1.7.1,<2",
    "PyQt6>=6.3.0,<7",
    "PyQt6-WebEngine>=6.3.0,<7",
    "pyotp>=2.7.0,<3",
]

[project.urls]
Homepage = "https://github.com/jmesterh/openconnect-sso-mtls"
Repository = "https://github.com/jmesterh/openconnect-sso-mtls"
Changelog = "https://github.com/jmesterh/openconnect-sso-mtls/releases"

[project.scripts]
openconnect-sso = "openconnect_sso.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-httpserver>=1.0,<2",
    "python-semantic-release>=10.5.3",
]

[tool.semantic_release]
commit_parser = "conventional"
commit_message = "chore(release): {version} [skip ci]"
major_on_zero = false
tag_format = "v{version}"
version_source = "tag"

[tool.semantic_release.changelog]
mode = "update"
default_templates = { changelog_file = "CHANGELOG.md" }
exclude_commit_patterns = [
  '''chore(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''refactor(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''test(?:\([^)]*?\))?: .+''',
  '''build\((?!deps\): .+)''',
  '''Merged? .*''',
]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.coverage.paths]
source = ["src/openconnect_sso/"]
tests = ["tests/"]

[tool.coverage.run]
branch = true
source = ["openconnect_sso"]
omit = [
    ".venv/*",
    "*/test*",
    "*/conftest.py",
    "*/__init__.py"
]

[tool.coverage.report]
show_missing = true

[tool.mypy]
cache_dir = "/dev/null"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["B", "C4", "D", "E", "F", "I", "N", "S", "TID", "W"]
ignore = [
    "E203",   # whitespace before ':'
    "E501",   # line too long (handled by line-length)
    "C901",   # too complex
    "S608",   # possible SQL injection
    "S311",   # random generators for cryptographic purposes
    "N802",   # function name should be lowercase
    "N806",   # variable in function should be lowercase (used for XML element builders)
    "TID251", # banned-api (we don't want to ban specific APIs)
    "TID253", # banned-module-level-imports (we don't want to ban module imports)
    "D301",   # use r""" if any backslashes in docstring (conflicts with Click \b formatting)
]

[tool.ruff.lint.per-file-ignores]
"src/openconnect_sso/app/__init__.py" = ["S103", "S602", "S603"]  # VPN tool needs subprocess/chmod
"src/openconnect_sso/browser/browser.py" = ["S101"]  # Asserts used for type narrowing
"src/openconnect_sso/browser/webengine_process.py" = ["N803"]  # Qt signal handlers use camelCase
"test_*.py" = ["S101", "N806", "S106"]
"tests/*" = ["S101", "N806", "S106"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.pytest.ini_options]
testpaths = ["tests/"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
norecursedirs = [
    "*.egg-info",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
]
